rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/trailing_tokens/final_keyword.rns
.class HelloWorld final
.super java/lang/Object
